# kaik

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md  TODO.md
docs/: _config.yml  index.md
docs/_posts/: 2025-01-09-the-start.md  2025-01-10-board-representation.md  2025-01-15-move-generation.md  2025-01-17-sliding-pieces-perft-3.md  2025-01-22-special-moves-and-check.md  2025-01-23-perft-tests-passing.md
src/: bitboard.rs  board.rs  color.rs  common.rs  constants.rs  engine.rs  fen.rs  game.rs  initial_board.rs  main.rs  movements.rs  moves.rs  perft.rs  pieces.rs  search.rs  side.rs  squares.rs  uci.rs
src/bitboard/: bb_type.rs  bitboard_type.rs  constants.rs  debug.rs  movements.rs  sliding_pieces_with_hq.rs
src/board/: attacks.rs  bitboard.rs  board_type.rs  castling.rs  display.rs  eval.rs  move_gen.rs  perft.rs  update.rs  zobrist.rs
src/board/bitboard/: constants.rs  debug.rs  movements.rs  sliding_pieces_with_hq.rs
src/common/: colors.rs  moves.rs  pieces.rs  squares.rs
src/engine/: alpha_beta.rs  eval.rs  game.rs  negamax.rs  search.rs
src/engine/search/: alphabeta.rs  negamax.rs
utils/: perft_cmp.sh  perft_ethereal.py  sf_perft.sh
