[package]
authors = ["Vincent Oberle"]
name = "kaik"
description = "Kaik Chess Engine"
version = "0.1.0"
edition = "2021"

[lints.clippy]
pedantic = "deny"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
flexi_logger = "0.29.8"
itertools = "0.14.0"
log = "0.4.25"
once_cell = "1.20.3"
rand = "0.8.5"

[features]
perft = []
# default = ["alphabeta"]
# alphabeta = []
